# ecsctl

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  config.toml.example  service.yaml
.github/: pull_request_template.md
.github/scripts/: review_contract.pl  test_review_contract.pl
.github/workflows/: ci.yml  release.yml  review-contract.yml
docs/: getting-started.md  review-contract.md
examples/: service.yaml
samples/hermes/: README.md  minimal.yaml
samples/openclaw/: README.md  minimal.yaml
schemas/: service.schema.json
src/: alias.rs  apply.rs  clone.rs  config.rs  container.rs  cp.rs  delete.rs  exec.rs  export.rs  lib.rs  loader.rs  logs.rs  main.rs  restart.rs  scale.rs  sync.rs  update.rs
src/scheduler/: infra.rs  mod.rs  schedule.rs
tmp/: chaodu.yaml  chaodu2.yaml  hermes.yaml  openclaw.yaml
