[package]
name = "ecsctl"
version = "0.3.0"
edition = "2021"
description = "kubectl-style CLI for AWS ECS Fargate — exec and cp via ECS Exec + S3 presigned URLs"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1"
aws-sdk-ec2 = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
